# dspatch.router

./: Cargo.toml  build.rs
proto/: dspatch_router.proto
src/: agent_host.rs  config.rs  grpc_service.rs  host_router.rs  instance_router.rs  lib.rs  main.rs  wal.rs  wire.rs  ws_client.rs
tests/: agent_host_test.rs  config_test.rs  grpc_service_test.rs  host_router_test.rs  inquiry_bubbling_test.rs  instance_router_test.rs  integration_test.rs  proto_smoke.rs  state_machine_test.rs  wal_test.rs  wire_test.rs  ws_client_test.rs
