[package]
name = "dspatch-router"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Container-native agent router for the dspatch platform"

[[bin]]
name = "dspatch-router"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

# WebSocket client (engine connection)
tokio-tungstenite = "0.26"

# Serialization (for WebSocket wire protocol — JSON packages)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers & time
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Synchronization
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
